@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-11T08:12:33Z",
+  "timestamp" : "2023-10-11T16:12:35Z",
   "count_outdated" : 1385,
   "uniques_outdated" : 750,
-  "count" : 1411,
+  "count" : 1412,
   "uniques" : 765,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
